# exqudens-cpp-sphinx

./: CMakeLists.txt  CMakePresets.json  conanfile.py  name-version.txt  package-config.cmake.in
cmake/: run-doxygen.cmake  run-sphinx.cmake
doc/: conf.py  docutils.conf
doc/designs/: c-design.rst  designs-1.rst  designs.rst
doc/links/: links.rst
doc/requirements/: requirements.rst
src/main/c/exqudens/: math.h
src/main/cpp/exqudens/: Strings.cpp  Strings.hpp  math.c  math.h  math_util.c  math_util.h
src/test/cpp/: TestApplication.cpp  TestConfiguration.cpp  TestConfiguration.hpp  TestUtils.cpp  TestUtils.hpp
src/test/cpp/exqudens/: Tests.hpp
